--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "ws": "^7.0.0"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "jest": "^24.8.0",
+    "mocha": "^7.0.1",
     "nodemon": "^2.0.2",
     "supertest": "^4.0.2"
   },
